--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="parallax-bg"></div>
-    
+
     <div class="floating-shapes">
         <div class="shape"></div>
         <div class="shape"></div>
@@ -60,15 +62,26 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="c:\Users\Admin\Pictures\z6827614550130_26ca345c740e234cd04e110e26c1d7c3.jpg" alt="Hoàng Văn Sỹ">
+                <img src="c:\Users\Admin\Pictures\z6827614550130_26ca345c740e234cd04e110e26c1d7c3.jpg"
+                    alt="Hoàng Văn Sỹ">
             </div>
             <div class="about-text">
                 <h3>Hoàng Văn Sỹ</h3>
-                <p>My coding journey started with a curiosity about how websites work. That small spark of interest led me to explore the world of web development, beginning with basic HTML and CSS. As I learned more, I found myself drawn to the logic behind JavaScript, the design flexibility of CSS, and the power of connecting front-end to back-end technologies.
-                    Over time, I've built various projects that challenged me to grow and refine my skills. Through dedication and creativity, I’ve developed a strong foundation in web development and problem-solving. Each challenge taught me something new—whether it was fixing a bug, improving performance, or creating a better user experience.
-                    I enjoy learning new technologies and staying updated with modern trends. What excites me the most is the endless opportunity to build useful, beautiful, and interactive things that others can enjoy. My journey is far from over, and I’m excited about what’s next.</p>
-                <p><strong>Experience:</strong> Studied web development for a month, quick learner and absorbing, good skills.</p>
-                <blockquote style="margin: 2rem 0; padding: 1rem; border-left: 3px solid var(--primary-color); background: #f8f8f8; font-style: italic;">
+                <p>My coding journey started with a curiosity about how websites work. That small spark of interest led
+                    me to explore the world of web development, beginning with basic HTML and CSS. As I learned more, I
+                    found myself drawn to the logic behind JavaScript, the design flexibility of CSS, and the power of
+                    connecting front-end to back-end technologies.
+                    Over time, I've built various projects that challenged me to grow and refine my skills. Through
+                    dedication and creativity, I’ve developed a strong foundation in web development and
+                    problem-solving. Each challenge taught me something new—whether it was fixing a bug, improving
+                    performance, or creating a better user experience.
+                    I enjoy learning new technologies and staying updated with modern trends. What excites me the most
+                    is the endless opportunity to build useful, beautiful, and interactive things that others can enjoy.
+                    My journey is far from over, and I’m excited about what’s next.</p>
+                <p><strong>Experience:</strong> Studied web development for a month, quick learner and absorbing, good
+                    skills.</p>
+                <blockquote
+                    style="margin: 2rem 0; padding: 1rem; border-left: 3px solid var(--primary-color); background: #f8f8f8; font-style: italic;">
                     "Simplicity is the soul of efficiency." – Austin Freeman
                 </blockquote>
             </div>
@@ -107,7 +120,8 @@
             <div class="timeline-item">
                 <h3>Web Development Journey</h3>
                 <p><strong>Duration:</strong> One month of intensive learning</p>
-                <p>Started my coding journey with curiosity about how websites work. Dedicated myself to mastering web technologies through hands-on projects and continuous learning.</p>
+                <p>Started my coding journey with curiosity about how websites work. Dedicated myself to mastering web
+                    technologies through hands-on projects and continuous learning.</p>
             </div>
         </div>
     </section>
@@ -127,11 +141,12 @@
                 </div>
                 <div class="project-content">
                     <h3>Portfolio Website</h3>
-                    <p>A responsive portfolio website showcasing my skills and projects. Built with HTML, CSS, and JavaScript with modern animations and effects.</p>
+                    <p>A responsive portfolio website showcasing my skills and projects. Built with HTML, CSS, and
+                        JavaScript with modern animations and effects.</p>
                     <a href="https://github.com/syhoang200706" target="_blank">github.com/syhoang200706</a>
                 </div>
             </div>
-            
+
             <div class="project-card">
                 <div class="project-image">
                     <div class="project-overlay">
@@ -143,7 +158,8 @@
                 </div>
                 <div class="project-content">
                     <h3>Coming Soon</h3>
-                    <p>More exciting projects are on the way! Stay tuned for updates on my latest developments and innovations.</p>
+                    <p>More exciting projects are on the way! Stay tuned for updates on my latest developments and
+                        innovations.</p>
                 </div>
             </div>
         </div>
@@ -216,6 +232,7 @@
     </footer>
 
     <script src="https://lib.youware.com/youware-lib-editor.1752562065.js" id="yourware-lib"></script>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
+
 </html>
