--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LEMOSHY GHOAN - Fullstack Developer</title>
+    <title>LEMOSY GHOAN - Fullstack Developer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="parallax-bg"></div>
-
-    <div class="floating-shapes">
+        <div class="shape"></div>
+        <div class="shape"></div>
         <div class="shape"></div>
         <div class="shape"></div>
         <div class="shape"></div>
@@ -22,7 +22,7 @@
 
     <header>
         <nav>
-            <a href="#" class="logo">LEMOSHY GHOAN</a>
+            <a href="#" class="logo">LEMOSY GHOAN</a>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -62,11 +62,11 @@
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
             <div class="about-image">
-                <img src="c:\Users\Admin\Pictures\z6827614550130_26ca345c740e234cd04e110e26c1d7c3.jpg"
-                    alt="Hoàng Văn Sỹ">
+                <img src="c:\Users\Admin\Pictures\z6831534813372_8eb6e37015cbcf97c533d1977d0e4ebb.jpg"
+                    alt="Hoang Van Sy">
             </div>
             <div class="about-text">
-                <h3>Hoàng Văn Sỹ</h3>
+                <h3>Hoang Van Sy</h3>
                 <p>My coding journey started with a curiosity about how websites work. That small spark of interest led
                     me to explore the world of web development, beginning with basic HTML and CSS. As I learned more, I
                     found myself drawn to the logic behind JavaScript, the design flexibility of CSS, and the power of
@@ -78,8 +78,7 @@
                     I enjoy learning new technologies and staying updated with modern trends. What excites me the most
                     is the endless opportunity to build useful, beautiful, and interactive things that others can enjoy.
                     My journey is far from over, and I’m excited about what’s next.</p>
-                <p><strong>Experience:</strong> Studied web development for a month, quick learner and absorbing, good
-                    skills.</p>
+                <p><strong>Experience:</strong> Learned web development for 6 weeks.</p>
                 <blockquote
                     style="margin: 2rem 0; padding: 1rem; border-left: 3px solid var(--primary-color); background: #f8f8f8; font-style: italic;">
                     "Simplicity is the soul of efficiency." – Austin Freeman
@@ -119,9 +118,33 @@
         <div class="experience-timeline">
             <div class="timeline-item">
                 <h3>Web Development Journey</h3>
-                <p><strong>Duration:</strong> One month of intensive learning</p>
-                <p>Started my coding journey with curiosity about how websites work. Dedicated myself to mastering web
-                    technologies through hands-on projects and continuous learning.</p>
+                <p><strong>Duration:</strong> 2 months of intensive learning</p>
+                <p>Web Development Journey
+                    Duration: 2 month of focused learning and practice
+
+                    My journey into web development began with a simple curiosity about how websites are built and
+                    function behind the scenes. Over the course of one month, I dedicated myself to understanding and
+                    applying the foundational technologies that power the modern web.
+
+                    I started by learning the basics of HTML and CSS, gaining a solid understanding of how to structure
+                    web content and style it for different screen sizes. Once I was comfortable with layout and design,
+                    I moved on to JavaScript, where I learned how to make web pages interactive through DOM
+                    manipulation, events, and basic scripting.
+
+                    Throughout this learning process, I built several small projects to apply what I had learned—such as
+                    a personal portfolio website, a responsive landing page, and a simple to-do list app using vanilla
+                    JavaScript. These hands-on experiences helped reinforce my knowledge and gave me confidence in my
+                    coding abilities.
+
+                    I also made use of online resources, video tutorials, and coding challenges to accelerate my
+                    learning. More than just writing code, I focused on problem-solving, debugging, and understanding
+                    how different parts of a website work together—from structure and style to behavior and
+                    interactivity.
+
+                    By the end of the month, I had not only grasped the core principles of front-end web development but
+                    also developed a deep appreciation for clean code, responsive design, and user experience. This
+                    journey marked the beginning of my commitment to becoming a skilled web developer, and I’m excited
+                    to continue learning and building more complex applications in the future..</p>
             </div>
         </div>
     </section>
@@ -132,6 +155,8 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3jWknEJM-LSD0TIC6CUH0J49rfCJFgSKjpA&s"
+                        alt="Portfolio Website Coding">
                     <div class="project-overlay">
                         <a href="https://github.com/syhoang200706" class="btn btn-primary">
                             <i class="fab fa-github"></i>
@@ -146,9 +171,10 @@
                     <a href="https://github.com/syhoang200706" target="_blank">github.com/syhoang200706</a>
                 </div>
             </div>
-
             <div class="project-card">
                 <div class="project-image">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvjWv-1uDUoeffByqbp6YMKsWqVMHXP3QL0Q&s"
+                        alt="Coding Project">
                     <div class="project-overlay">
                         <a href="#" class="btn btn-primary">
                             <i class="fas fa-external-link-alt"></i>
@@ -179,7 +205,7 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email</h4>
-                        <p>syhoang200706@gmail.com</p>
+                        <p>syhoang200706@email.com</p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -223,16 +249,16 @@
 
     <footer>
         <div class="social-links">
-            <a href="mailto:syhoang200706@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:syhoang200706@email.com"><i class="fas fa-envelope"></i></a>
             <a href="https://github.com/syhoang200706" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="tel:+840342888212"><i class="fas fa-phone"></i></a>
+            <a href="tel:+84342888212"><i class="fas fa-phone"></i></a>
         </div>
-        <p>© 2025 LEMOSHY GHOAN. All rights reserved.</p>
+        <p>© 2025 LEMOSY GHOAN. All rights reserved.</p>
         <p>Fullstack Developer | Portfolio</p>
     </footer>
 
     <script src="https://lib.youware.com/youware-lib-editor.1752562065.js" id="yourware-lib"></script>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
